Disable ARM artifacts in publish_release: comment out for future use

--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -46,11 +46,12 @@ jobs:
         with:
           name: KonomiTV-Installer.elf
           path: ${{ github.workspace }}/
-      - name: Download Installer (for Linux ARM)
-        uses: actions/download-artifact@v4
-        with:
-          name: KonomiTV-Installer-ARM.elf
-          path: ${{ github.workspace }}/
+      # ARM版のインストーラー (現在は無効化)
+      # - name: Download Installer (for Linux ARM)
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: KonomiTV-Installer-ARM.elf
+      #     path: ${{ github.workspace }}/
       - name: Download Thirdparty Library (for Windows)
         uses: actions/download-artifact@v4
         with:
@@ -61,11 +62,12 @@ jobs:
         with:
           name: thirdparty-linux.tar.xz
           path: ${{ github.workspace }}/
-      - name: Download Thirdparty Library (for Linux ARM)
-        uses: actions/download-artifact@v4
-        with:
-          name: thirdparty-linux-arm.tar.xz
-          path: ${{ github.workspace }}/
+      # ARM版のサードパーティーライブラリ (現在は無効化)
+      # - name: Download Thirdparty Library (for Linux ARM)
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: thirdparty-linux-arm.tar.xz
+      #     path: ${{ github.workspace }}/
 
       # KonomiTV のソースコードをチェックアウト
       - name: Checkout Repository
@@ -97,7 +99,9 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: 'KonomiTV-Installer.exe,KonomiTV-Installer.elf,KonomiTV-Installer-ARM.elf,thirdparty-windows.7z,thirdparty-linux.tar.xz,thirdparty-linux-arm.tar.xz'
+          artifacts: 'KonomiTV-Installer.exe,KonomiTV-Installer.elf,thirdparty-windows.7z,thirdparty-linux.tar.xz'
+          # ARM版のアーティファクト (現在は無効化)
+          # artifacts: 'KonomiTV-Installer.exe,KonomiTV-Installer.elf,KonomiTV-Installer-ARM.elf,thirdparty-windows.7z,thirdparty-linux.tar.xz,thirdparty-linux-arm.tar.xz'
           generateReleaseNotes: true
           name: KonomiTV (β) ${{ steps.get_version.outputs.version }}
           tag: v${{ steps.get_version.outputs.version }}
