--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -75,7 +75,7 @@ jobs:
         with:
           fetch-depth: 0
           path: KonomiTV
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GIT_PUSH_TOKEN }}
 
       # KonomiTV のバージョン番号をリリースコミットのコミットメッセージから取得
       - name: Get Version
