--- a/.github/workflows/publish_docker_image.yaml
+++ b/.github/workflows/publish_docker_image.yaml
@@ -67,7 +67,9 @@ jobs:
       # ref: https://github.com/vlaurin/action-ghcr-prune
       # シークレットが設定されていない場合はスキップ
       - name: Prune Untagged Docker Images
-        if: secrets.DELETE_GHCR_IMAGES_TOKEN != ''
+        env:
+          DELETE_TOKEN: ${{ secrets.DELETE_GHCR_IMAGES_TOKEN }}
+        if: env.DELETE_TOKEN != ''
         uses: vlaurin/action-ghcr-prune@v0.6.0
         with:
           token: ${{ secrets.DELETE_GHCR_IMAGES_TOKEN }}
